--- a/lerning_python.ipynb
+++ b/lerning_python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPX9yRgdZ9Yh6rAOc10Oapk",
+      "authorship_tag": "ABX9TyPqF6ayJpJ3AxqdE/yKEoyj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "suE5OgIpOF49"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "class SampleClass:\n",
+        "  def __init__(self, data1, data2):\n",
+        "    self.data1 = data1\n",
+        "    self.data2 = data2\n",
+        "\n",
+        "  def method2(self):\n",
+        "    return self.data1 + self.data2\n",
+        "\n"
+      ]
     }
   ]
 }
